// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseSettings dismisses modal activity upon save error 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 0.8,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings renders 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 0.8,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings renders a modal activity when saving 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={true}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 0.8,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings renders with empty image url 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings renders with image url 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "http://www.fillmurray.com/100/100",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 0.8,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings renders without image url 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 1,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {},
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 150,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`CourseSettings shows home view picker when home row tapped 1`] = `
<Screen
  drawUnderNavBar={false}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColor="#2D3B45"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "course-settings.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={false}
  statusBarStyle="default"
  title="Course Settings"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ModalOverlay
      activityIndicatorColor="#fff"
      animationType="fade"
      backgroundColor="rgba(0,0,0,0.8)"
      height={170}
      showActivityIndicator={true}
      text="Saving"
      transparent={true}
      visible={false}
      width={170}
    />
    <KeyboardAwareScrollView
      enableAutoAutomaticScroll={true}
      enableResetScrollToCoords={true}
      extraHeight={75}
      extraScrollHeight={0}
      keyboardOpeningTime={250}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 235,
            "justifyContent": "center",
            "padding": 10,
            "paddingTop": 20,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#333",
                  "opacity": 0.8,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "height": 54,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2D3B45",
                "flex": 2,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 54,
              }
            }
            testID="course-settings.name-lbl"
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "color": "#2D3B45",
                "flex": 3,
                "fontSize": 16,
                "lineHeight": 54,
                "textAlign": "right",
              }
            }
            testID="course-settings.name-input-textbox"
            value="Learn React Native"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <TouchableHighlight
        activeOpacity={0.85}
        onPress={[Function]}
        testID="course-settings.toggle-home-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "height": 54,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2D3B45",
                  "flex": 2,
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 54,
                }
              }
              testID="course-settings.set-home-lbl"
            >
              Set 'Home' to...
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "flex": 3,
                    "fontSize": 16,
                    "lineHeight": 54,
                    "textAlign": "right",
                  },
                  Object {
                    "color": "#374A59",
                  },
                ]
              }
              testID="course-settings.home-page-lbl"
            >
              Pages Front Page
            </Text>
          </View>
        </View>
      </TouchableHighlight>
      <View
        style={
          Object {
            "backgroundColor": "#C7CDD1",
            "height": 0.5,
          }
        }
      />
      <PickerIOS
        onValueChange={[Function]}
        selectedValue="wiki"
        style={
          Object {
            "flex": 1,
          }
        }
        testID="course-settings.home-picker"
      >
        <Component
          key="feed"
          label="Course Activity Stream"
          value="feed"
        />
        <Component
          key="wiki"
          label="Pages Front Page"
          value="wiki"
        />
        <Component
          key="modules"
          label="Course Modules"
          value="modules"
        />
        <Component
          key="assignments"
          label="Assignments List"
          value="assignments"
        />
        <Component
          key="syllabus"
          label="Syllabus"
          value="syllabus"
        />
      </PickerIOS>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "flex": 0,
            },
            Object {
              "height": 0,
            },
          ]
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;
